# notebooks

./: pyproject.toml
deep-learning/: dive-into-deep-learning.ipynb
machine-learning/: introduction.ipynb
math/Linear Algebra/: Vectors.ipynb
math/functions/: functions.ipynb  linear-functions.ipynb
