[project]
name = "notebooks"
version = "0.1.0"
description = "Set of Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.10.0",
    "ipython>=9.2.0",
    "manim>=0.19.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "sympy>=1.14.0",
    "torch>=2.7.0",
]
